@@ -21,8 +21,13 @@ referencedRelationship = 'isReferencing'
 
 def findObject(base, path):
     """ traverse to given path and find the upmost object """
-    obj = base
-    components = path.split('/')
+    if path.startswith('/'):
+        obj = getToolByName(base, 'portal_url').getPortalObject()
+        portal_path = '/'.join(obj.getPhysicalPath())
+        components = path.lstrip(portal_path + '/').split('/')
+    else:
+        obj = aq_parent(base)   # relative urls start at the parent...
+        components = path.split('/')
     while components:
         child_id = unquote(components[0])
         try:
